--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/Team/Umoren Sammy.jpg" class="img-fluid" alt="">
+              <img src="img/Team/Umoren Sammy.jpg" class="img-fluid border" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Umoren Samuel</h4>
@@ -245,7 +245,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/Team/iniabasi.jpg" class="img-fluid" alt="">
+              <img src="img/Team/iniabasi.jpg" class="img-fluid border" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Iniabasi Bernard</h4>
@@ -281,7 +281,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/Team/agabus-Square.jpg" class="img-fluid" alt="">
+              <img src="img/Team/agabus-Square.jpg" class="img-fluid border" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Agabus Blessing</h4>
