Added Select boxes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="carousel-content">
                 <h2>Finding it difficult studying GST?</h2>
                 <div><h4>Practice here to increase your chances of getting a A.</p></div>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="startpage.html" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
               <div class="carousel-content">
                 <h2>Can't find Accurate answers to Past Questions?</h2>
                 <div><h4> The Answers to our Past Questions were well reviewed by the top "A" students in GST.</h4> </div>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="startpage.html" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
                 
                 <h2>Get Confident Before Writing that GST test </h2>
                <div> <h4>After practicing on this platform, your confidence level would spike like mountain lava!</h4></div>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="startpage.html" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
           </div>
