Added New Images

--- a/index.html
+++ b/index.html
@@ -231,7 +231,25 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Umoren Samuel</h4>
-                  <span>CEO and Web Developer</span>
+                  <span>Web Developer</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp">
+            <div class="member">
+              <img src="img/Team/Umoren Sammy.jpg" class="img-fluid border" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Emmanuel Enya</h4>
+                  <span>Mobile App Developer</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -249,7 +267,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Iniabasi Bernard</h4>
-                  <span>CTO and ML Enthusiast</span>
+                  <span>ML Enthusiast</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
