--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/Team/Umoren Sammy.jpg" class="img-fluid border" alt="">
+              <img src="img/Team/Emmanuel_Enya-Square.jpg" class="img-fluid border" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Emmanuel Enya</h4>
