--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <p>We have curated over 250+ Past Questions in all GST courses with the help of our Machine Learning Algorithm.<br> Our Algorithm has predicted possible questions that'll help you ace your GST tests and exams this year. Practice here to 
           increase your chances of getting an A in GST.
         </p>
-        <a class="cta-btn" href="#">Get Started</a>
+        <a class="cta-btn" href="startpage.html">Get Started</a>
       </div>
     </section><!-- #call-to-action -->
 
@@ -225,7 +225,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp">
+          <div class="col-lg-4 col-md-6 wow fadeInUp">
             <div class="member">
               <img src="img/Team/Umoren Sammy.jpg" class="img-fluid border" alt="">
               <div class="member-info">
@@ -243,7 +243,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp">
+          <div class="col-lg-4 col-md-6 wow fadeInUp">
             <div class="member">
               <img src="img/Team/Emmanuel_Enya-Square.jpg" class="img-fluid border" alt="">
               <div class="member-info">
@@ -261,7 +261,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
               <img src="img/Team/iniabasi.jpg" class="img-fluid border" alt="">
               <div class="member-info">
@@ -278,7 +278,7 @@
               </div>
             </div>
           </div>
-
+<!-- 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
               <img src="img/Team/anibrite-Square.jpg" class="img-fluid  border" alt="">
@@ -313,7 +313,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
