Added quiz section

--- a/startpage.html
+++ b/startpage.html
@@ -96,7 +96,7 @@
               <li> 50 questions </li>
               <li> 100%</li>
           </ul>
-          <button class ="btn btn-primary"> START </button>
+         <a href="quiz.html"> <button class ="btn btn-primary" > START </button></a>
         </div>
         </div>
       </div>
