Quiz section added

--- a/quiz.html
+++ b/quiz.html
@@ -30,6 +30,11 @@
             <div id="progress"></div>
         </div>
         <div id="scoreContainer" ></div>
+        <div class="nav"> 
+            <a href="#"><p class="naver"> Practice Again  </p></a>
+            <a href="#"><p style="text-align:center"> Go to Select Page </p></a>
+
+        </div>
     </div>
     <script src="quiz.js"></script>
 </body>
