Converted images to webp

--- a/startpage.html
+++ b/startpage.html
@@ -96,7 +96,7 @@
               <li> 50 questions </li>
               <li> 100%</li>
           </ul>
-         <a href="quiz.html"> <button class ="btn btn-primary" > START </button></a>
+         <button class ="btn btn-primary disabled" > Not Available </button></a>
         </div>
         </div>
       </div>
@@ -111,10 +111,11 @@
           <div class="text-center">
           <h5> Level 100 Students</h5>
           <ul>
-              <li> 50 questions </li>
+              <li> 20 questions </li>
+              <li>Subjective</li>
               <li> 100%</li>
           </ul>
-          <button class ="btn btn-primary"> START </button>
+         <a href="https://testmoz.com/2088045"> <button class ="btn btn-primary" > START </button></a>
         </div>
         </div>
       </div>
@@ -129,10 +130,11 @@
           <div class="text-center">
           <h5> Level 100 Students</h5>
           <ul>
-              <li> 50 questions </li>
+              <li> 20 questions </li>
+              
               <li> 100%</li>
           </ul>
-          <button class ="btn btn-primary"> START </button>
+          <button class ="btn btn-primary disabled"> Not Available </button>
         </div>
         </div>
       </div>
