--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="manifest" href="favicon_io/site.webmanifest">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
+  <link href="fonts/font.css" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -423,11 +423,11 @@
   <!-- <div id="preloader"></div> -->
 
   <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/jquery/jquery.min.js" ></script>
+  <script src="lib/jquery/jquery-migrate.min.js" ></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js" async></script>
+  <script src="lib/easing/easing.min.js" async></script>
+  <script src="lib/superfish/hoverIntent.js" ></script>
   <script src="lib/superfish/superfish.min.js"></script>
   <script src="lib/wow/wow.min.js"></script>
   <script src="lib/waypoints/waypoints.min.js"></script>
