--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="manifest" href="favicon_io/site.webmanifest">
 
   <!-- Google Fonts -->
-  <link href="fonts/font.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
