--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
-  <!-- <link href="lib/animate/animate.min.css" rel="stylesheet" > -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet" >
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" >
