Fixed Span on header

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
-  <!-- <link href="lib/animate/animate.min.css" rel="stylesheet" > --> 
+  <link href="lib/animate/animate.min.css" rel="stylesheet" > 
    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet"> 
-  <!-- <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" > -->
+   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" > 
 
   <!-- Main Stylesheet File -->
   <!-- <link href="css/style.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="application.css">
+  <link rel="stylesheet" href="css/style.css">
 
  
 </head>
@@ -42,7 +42,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">TechDom</a></h1>
+        <h1><a href="#intro" class="scrollto">TechDom<span class="small size"> beta 1.0</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
