--- a/startpage.html
+++ b/startpage.html
@@ -39,7 +39,7 @@
                 <div class="container-fluid">
             
                   <div id="logo" class="pull-left">
-                    <h1><a href="index.html" class="scrollto">TechDom</a></h1>
+                    <h1><a href="index.html" class="scrollto">TechDom<span class="small size">beta 1.0</span></a></h1>
                     <!-- Uncomment below if you prefer to use an image logo -->
                     <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
                   </div>
