--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="techdom TechDom GST GST111 GST 112 GST 211 " name="keywords">
   <meta content="GST past questions site" name="description">
-
+  <meta name="mobile-web-app-capable" content="yes">
   <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -226,27 +226,28 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 wow fadeInUp">
+          <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/Team/Umoren Sammy.webp" class="img-fluid border" alt="">
+              <img src="img/Team/Umoren Sammy.webp" class="img-fluid border" alt="Umoren Samuel">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Umoren Samuel</h4>
                   <span>Web Developer</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-github"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="https://facebook.com/umoren.samuel.10"><i class="fa fa-facebook"></i></a>
+                    <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a>
+                    <a href="https://linkedin.com/in/samuel-umoren-62b15a158/"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://instagram.com/samuelumoren365/"><i class="fa fa-instagram"></i></a> 
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 wow fadeInUp">
+          <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/Team/Emmanuel_Enya-Square.webp" class="img-fluid border" alt="">
+              <img src="img/Team/Emmanuel_Enya-Square.webp" class="img-fluid border" alt="Emmanuel Enya">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Emmanuel Enya</h4>
@@ -262,9 +263,9 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/Team/iniabasi.webp" class="img-fluid border" alt="">
+              <img src="img/Team/iniabasi.webp" class="img-fluid border" alt="Iniabasi Bernard">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Iniabasi Bernard</h4>
@@ -280,7 +281,23 @@
             </div>
           </div>
 
-
+        <div class="col-lg-3 col-md-6 wow fadeInUp">
+            <div class="member">
+              <img src="img/Team/precious_collins1-Square.webp" class="img-fluid border" alt="Precious Collins">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Precious Collins</h4>
+                  <span>Digital Marketer and Influencer</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-instagram"></i></a> 
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
         </div>
 
       </div>
