converted .png to .webp

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
             <div class="about-col">
               <div class="img">
-                <img src="img/plan.jpg" alt="" class="img-fluid">
+                <img src="img/about-plan.webp" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Our Plan</a></h2>
