Added meta and link tags to startpage

--- a/startpage.html
+++ b/startpage.html
@@ -4,14 +4,17 @@
   <meta charset="utf-8">
   <title>TechDom</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-
+  <meta content="techdom TechDom GST GST111 GST 112 GST 211 " name="keywords">
+  <meta content="GST past questions site" name="description">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#3C5A99" />
   <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-<link rel="manifest" href="favicon_io/site.webmanifest">
+
+<!-- PWA -->
+<link rel="manifest" href="/manifest.json">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
