--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+
+<!-- PWA -->
 <link rel="manifest" href="/manifest.json">
 
   <!-- Google Fonts -->
