Added new team members and updated manifest.json

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Umoren Samuel</h4>
-                  <span>Web Developer</span>
+                  <span>Web Developer and Founder</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href="https://facebook.com/umoren.samuel.10"><i class="fa fa-facebook"></i></a>
@@ -252,17 +252,17 @@
 
           <div class="col-lg-3  col-md-6 wow fadeInUp">
               <div class="member">
-                <img src="img/Team/Umoren Sammy.webp" class="img-fluid border center" alt="Umoren Samuel">
+                <img src="img/Team/Iniabasireal.webp" class="img-fluid border center" alt="Umoren Samuel">
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>Umoren Samuel</h4>
-                    <span>Web Developer</span>
+                    <h4>Iniabasi Bernard</h4>
+                    <span>ML Enthusiast and Co-founder, TechDom</span>
                     <div class="social">
                       <a href=""><i class="fa fa-twitter"></i></a>
-                      <a href="https://facebook.com/umoren.samuel.10"><i class="fa fa-facebook"></i></a>
-                      <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a>
-                      <a href="https://linkedin.com/in/samuel-umoren-62b15a158/"><i class="fa fa-linkedin"></i></a>
-                      <a href="https://instagram.com/samuelumoren365/"><i class="fa fa-instagram"></i></a> 
+                      <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
+                      <a href="https://github.com/"><i class="fa fa-github"></i></a>
+                      <a href="https://linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                      <a href="https://instagram.com/"><i class="fa fa-instagram"></i></a> 
                     </div>
                   </div>
                 </div>
@@ -271,17 +271,17 @@
 
             <div class="col-lg-3  col-md-6 wow fadeInUp">
                 <div class="member">
-                  <img src="img/Team/Umoren Sammy.webp" class="img-fluid border center" alt="Umoren Samuel">
+                  <img src="img/Team/Chi-praise Basil.webp" class="img-fluid border center" alt="Umoren Samuel">
                   <div class="member-info">
                     <div class="member-info-content">
-                      <h4>Umoren Samuel</h4>
-                      <span>Web Developer</span>
+                      <h4>Chi-Praise Basil</h4>
+                      <span>Lead Designer</span>
                       <div class="social">
                         <a href=""><i class="fa fa-twitter"></i></a>
-                        <a href="https://facebook.com/umoren.samuel.10"><i class="fa fa-facebook"></i></a>
-                        <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a>
-                        <a href="https://linkedin.com/in/samuel-umoren-62b15a158/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://instagram.com/samuelumoren365/"><i class="fa fa-instagram"></i></a> 
+                        <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <!-- <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a> -->
+                        <a href="https://linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://instagram.com/"><i class="fa fa-instagram"></i></a> 
                       </div>
                     </div>
                   </div>
@@ -290,17 +290,17 @@
 
               <div class="col-lg-3  col-md-6 wow fadeInUp">
                   <div class="member">
-                    <img src="img/Team/Umoren Sammy.webp" class="img-fluid border center" alt="Umoren Samuel">
+                    <img src="img/Team/Love.webp" class="img-fluid border center" alt="Umoren Samuel">
                     <div class="member-info">
                       <div class="member-info-content">
-                        <h4>Umoren Samuel</h4>
-                        <span>Web Developer</span>
+                        <h4>Love Otudor </h4>
+                        <span>Content Writer and Digital Marketer</span>
                         <div class="social">
                           <a href=""><i class="fa fa-twitter"></i></a>
-                          <a href="https://facebook.com/umoren.samuel.10"><i class="fa fa-facebook"></i></a>
-                          <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a>
-                          <a href="https://linkedin.com/in/samuel-umoren-62b15a158/"><i class="fa fa-linkedin"></i></a>
-                          <a href="https://instagram.com/samuelumoren365/"><i class="fa fa-instagram"></i></a> 
+                          <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
+                          <!-- <a href="https://github.com/Umoren"><i class="fa fa-github"></i></a> -->
+                          <a href="https://linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                          <a href="https://instagram.com/"><i class="fa fa-instagram"></i></a> 
                         </div>
                       </div>
                     </div>
@@ -314,7 +314,7 @@
     </section><!-- #team -->
 
     <!--==========================
-      Contact Section
+      Start Section
     ============================-->
     <section id="start">
         <div class="container">
