--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Finding it difficult studying GST?</h2>
-                <div><h4>Practice here to increase your chances of getting a A.</p></div>
+                <div><h4>Practice here to increase your chances of getting an A.</p></div>
                 <a href="startpage.html" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -338,7 +338,7 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                    <li> 50 questions </li>
+                    <li > 50 questions </li>
                     <li> 100%</li>
                 </ul>
                <button class ="btn btn-primary disabled" > Not Available </button></a>
@@ -443,7 +443,7 @@
 
     <div class="container">
       <div class="copyright">
-      TechDom &copy; 2019 
+      <a href="samtech.netlify.com"> Umoren Samuel </a> &copy; 2019 
       </div>
      
     </div>
