--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
   <!-- <link rel="stylesheet" href="css/start.css"> -->
   <link rel="stylesheet" href="css/style.css">
  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138246929-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138246929-1');
+</script>
 
  
 </head>
