--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
   gtag('config', 'UA-138246929-1');
 </script>
 
- 
+ <!-- ADSENSE -->
+
+ <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3369566674885579",
+    enable_page_level_ads: true
+  });
+</script>
+
 </head>
 
 <body>
