--- a/startpage.html
+++ b/startpage.html
@@ -33,7 +33,25 @@
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/start.css">
 
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138246929-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138246929-1');
+</script>
+
+ <!-- ADSENSE -->
+
+ <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3369566674885579",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
     
