Added more questions to GST 111

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Main Stylesheet File -->
   <!-- <link href="css/style.css" rel="stylesheet"> -->
-  <!-- <link rel="stylesheet" href="css/start.css"> -->
+  <link rel="stylesheet" href="css/start.css">
   <link rel="stylesheet" href="css/style.css">
  
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -46,13 +46,13 @@
 
  <!-- ADSENSE -->
 
- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-3369566674885579",
     enable_page_level_ads: true
   });
-</script>
+</script> -->
 
 </head>
 
@@ -356,10 +356,11 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                    <li > 50 questions </li>
-                    <li> 100%</li>
-                </ul>
-               <button class ="btn btn-primary disabled" > Not Available </button></a>
+                  <li> 20 questions </li>
+                  <li> 2 MARKS PER QUESTION</li>
+                  <li> Objectives </li> 
+              </ul>
+            <a href="https://testmoz.com/2104305" target="_blank"><button class ="btn btn-primary" > START </button></a>
               </div>
               </div>
             </div>
