--- a/startpage.html
+++ b/startpage.html
@@ -111,10 +111,11 @@
           <div class="text-center">
           <h5> Level 100 Students</h5>
           <ul>
-              <li> 50 questions </li>
-              <li> 100%</li>
+              <li> 20 questions </li>
+              <li> 2 MARKS PER QUESTION</li>
+              <li> Objectives </li> 
           </ul>
-         <button class ="btn btn-primary disabled" > Not Available </button></a>
+        <a href="https://testmoz.com/2104305" target="_blank"><button class ="btn btn-primary" > START </button></a>
         </div>
         </div>
       </div>
@@ -133,7 +134,7 @@
               <li>Subjective</li>
               <li> 100%</li>
           </ul>
-         <a href="https://testmoz.com/2088045"> <button class ="btn btn-primary" > START </button></a>
+         <a href="https://testmoz.com/2088045" target="_blank"> <button class ="btn btn-primary" > START </button></a>
         </div>
         </div>
       </div>
