Edited team members photo Added GST 211

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
           <div class="col-lg-3  col-md-6 wow fadeInUp">
               <div class="member">
-                <img src="img/Team/Iniabasireal.webp" class="img-fluid border center" alt="Umoren Samuel">
+                <img src="img/Team/Iniabasi_Bernard-Square (1).webp" class="img-fluid border center" alt="Umoren Samuel">
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Iniabasi Bernard</h4>
@@ -289,7 +289,7 @@
 
             <div class="col-lg-3  col-md-6 wow fadeInUp">
                 <div class="member">
-                  <img src="img/Team/Chi-praise Basil.webp" class="img-fluid border center" alt="Umoren Samuel">
+                  <img src="img/Team/chipraise-Square.webp" class="img-fluid border center" alt="Umoren Samuel">
                   <div class="member-info">
                     <div class="member-info-content">
                       <h4>Chi-Praise Basil</h4>
@@ -308,7 +308,7 @@
 
               <div class="col-lg-3  col-md-6 wow fadeInUp">
                   <div class="member">
-                    <img src="img/Team/Love.webp" class="img-fluid border center" alt="Umoren Samuel">
+                    <img src="img/Team/Love_otudor-Square.webp" class="img-fluid border center" alt="Umoren Samuel">
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Love Otudor </h4>
@@ -357,7 +357,7 @@
                 <h5> Level 100 Students</h5>
                 <ul>
                   <li> 20 questions </li>
-                  <li> 2 MARKS PER QUESTION</li>
+                  <li> 5 MARKS PER QUESTION</li>
                   <li> Objectives </li> 
               </ul>
             <a href="https://testmoz.com/2104305" target="_blank"><button class ="btn btn-primary" > START </button></a>
@@ -376,8 +376,9 @@
                 <h5> Level 100 Students</h5>
                 <ul>
                     <li> 20 questions </li>
-                    <li>Subjective</li>
-                    <li> 100%</li>
+                    <li> 5 marks per Question</li>
+                    <li>Objective</li>
+                    
                 </ul>
                <a href="https://testmoz.com/2088045"> <button class ="btn btn-primary" > START </button></a>
               </div>
@@ -387,17 +388,18 @@
             <div class="col-md-4 wow fadeInUp">
                 <div class="start-col">
                  
-                  <h2 class="title"><a href="#">GST 111</a></h2>
+                  <h2 class="title"><a href="#">GST 211</a></h2>
                   <p class="text-center">
-                    Use Of English 1
+                  Entrepreneurial Studies 1
                   </p>
                   <div class="text-center">
-                  <h5> Level 100 Students</h5>
+                  <h5> Level 200 Students</h5>
                   <ul>
-                      <li> 50 questions </li>
-                      <li> 100%</li>
+                      <li> 20 questions </li>
+                      <li>5 marks per question</li>
+                      <li>Objectives</li>
                   </ul>
-                 <button class ="btn btn-primary disabled" > Not Available </button></a>
+                <a href="https://testmoz.com/2104383"> <button class ="btn btn-primary" > START </button></a>
                 </div>
                 </div>
               </div> 
