--- a/startpage.html
+++ b/startpage.html
@@ -115,7 +115,7 @@
             <li> 5 MARKS PER QUESTION</li>
             <li> Objectives </li> 
         </ul>
-      <a href="https://testmoz.com/2104305" target="_blank"><button class ="btn btn-primary" > START </button></a>
+      <a href="https://testmoz.com/2104305"><button class ="btn btn-primary" > START </button></a>
         </div>
         </div>
       </div>
