--- a/GSTblog.html
+++ b/GSTblog.html
@@ -84,7 +84,7 @@
             <div class="row">
 
             <div class="col-lg-4 col-md-6">
-                <div class="journal-info mb-30">
+                <div class="journal-info mb-30 border">
 
                 <a href="blog-post1.html"><img src="blog images/business plan.jpg" class='img-responsive' alt="img"></a>
 
@@ -92,7 +92,9 @@
 
                     <h4><a href="blog-post1.html">HOW TO WRITE A BUSINESS PLAN </a></h4>
 
-                    <p class="separator">To an English person, it will seem like simplified English
+                    <p class="separator">
+                            A business plan is a written document that describes all the relevant internal and external elements and strategies for starting
+                             a new business idea or an already existing business.
                     </p>
 
                 </div>
@@ -100,9 +102,9 @@
         </div>
 
         <div class="col-lg-4 col-md-6">
-                <div class="journal-info mb-30">
+                <div class="journal-info mb-30 border ">
 
-                <a href=""><img src="blog images/not-available.webp" class="img-responsive" alt="img"></a>
+                <a href=""><img src="blog images/not-available.webp" class="img-responsive color-specific" alt="img"></a>
 
                 <div class="journal-txt">
 
@@ -115,13 +117,13 @@
         </div>
 
         <div class="col-lg-4 col-md-6">
-            <div class="journal-info mb-30">
+            <div class="journal-info mb-30 border">
 
                 <a href=""><img src="blog images/not-available.webp" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
-                <h4><a href="blog-post1.html">HOW TO PREPARE FOR GST EXAM</a></h4>
+                <h4><a  href="blog-post1.html">HOW TO PREPARE FOR GST EXAM</a></h4>
                 <p class="separator">THIS ARTICLE IS NOT AVAILABLE NOW
                 </p>
 
