--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                  <li> 20 questions </li>
-                  <li> 5 MARKS PER QUESTION</li>
-                  <li> Objectives </li> 
+                  <li> 40 questions </li>
+                  <li> 2 MARKS PER QUESTION</li>
+                  <li> Subjectives </li> 
               </ul>
-            <a href="https://testmoz.com/2104305" ><button class ="btn btn-primary" > START </button></a>
+            <a href="https://testmoz.com/2072373" ><button class ="btn btn-primary" > START </button></a>
               </div>
               </div>
             </div>
@@ -406,12 +406,12 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                    <li> 20 questions </li>
-                    <li> 5 marks per Question</li>
-                    <li>Objective</li>
+                    <li> 35 questions </li>
+                    <li> 2 marks per Question</li>
+                    <li>Subjective</li>
                     
                 </ul>
-               <a href="https://testmoz.com/2088045"> <button class ="btn btn-primary" > START </button></a>
+               <a href="https://testmoz.com/2149981"> <button class ="btn btn-primary" > START </button></a>
               </div>
               </div>
             </div>
