--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">GSTPQ<span class="small size"> beta 1.0</span></a></h1>
+        <h1><a href="#intro" class="scrollto">TechDom<span class="small size"> beta 1.0</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
