--- a/startpage.html
+++ b/startpage.html
@@ -42,16 +42,6 @@
 
   gtag('config', 'UA-138246929-1');
 </script>
-
- <!-- ADSENSE -->
-
- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-3369566674885579",
-    enable_page_level_ads: true
-  });
-</script>
 </head>
 <body>
     
@@ -130,9 +120,9 @@
           <div class="text-center">
           <h5> Level 100 Students</h5>
           <ul>
-              <li> 40 questions </li>
+              <li> 50 questions </li>
               <li> 2 marks per Question</li>
-              <li>Subjective</li>
+              <li>Objective</li>
               
           </ul>
          <a href="https://testmoz.com/2149981"> <button class ="btn btn-primary" > START </button></a>
