--- a/startpage.html
+++ b/startpage.html
@@ -101,9 +101,9 @@
           <div class="text-center">
           <h5> Level 100 Students</h5>
           <ul>
-            <li> 40 questions </li>
+            <li> 50 questions </li>
             <li> 2 MARKS PER QUESTION</li>
-            <li> Subjectives </li> 
+            <li> Objectives </li> 
         </ul>
       <a href="https://testmoz.com/2072373"><button class ="btn btn-primary" > START </button></a>
         </div>
