--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                  <li> 40 questions </li>
+                  <li> 35 questions </li>
                   <li> 2 MARKS PER QUESTION</li>
-                  <li> Subjectives </li> 
+                  <li> Objectives </li> 
               </ul>
             <a href="https://testmoz.com/2072373" ><button class ="btn btn-primary" > START </button></a>
               </div>
@@ -408,9 +408,9 @@
                 <div class="text-center">
                 <h5> Level 100 Students</h5>
                 <ul>
-                    <li> 35 questions </li>
+                    <li> 50 questions </li>
                     <li> 2 marks per Question</li>
-                    <li>Subjective</li>
+                    <li>Objective</li>
                     
                 </ul>
                <a href="https://testmoz.com/2149981"> <button class ="btn btn-primary" > START </button></a>
