Updated team tags

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Chi-Praise Basil</h4>
-                        <span>Logo Designer</span>
+                        <span>Logo, UI and UX Designer</span>
                         <div class="social">
                           <a href=""><i class="fa fa-twitter"></i></a>
                           <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
